force-app/main/default/objects/CWS_Trial__c/CWS_Trial__c.object-meta.xml
<CustomObject>
    <label>Trial</label>
    <nameField>
        <label>Trial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>