force-app/main/default/objects/CWS_Trial__c/fields/CWS_Additional_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures additional contact person for trial.</inlineHelpText>
    <label>Additional Contact 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CWS_Related_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trials (Additional Contact 1)</relationshipLabel>
    <relationshipName>Trials1</relationshipName>
    <type>Lookup</type>
</CustomField>