force-app/main/default/objects/CWS_Trial__c/fields/CWS_Additional_Contact_1_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Contact_1_Email__c</fullName>
    <formula>CWS_Additional_Contact_1__r.Email</formula>
    <inlineHelpText>Captures the email address for Additional Contact1.</inlineHelpText>
    <label>Additional Contact 1 Email</label>
    <type>Text</type>
</CustomField>