force-app/main/default/objects/CWS_Trial__c/fields/CWS_Additional_Contact_2_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Additional_Contact_2_Email__c</fullName>
    <formula>CWS_Additional_Contact_2__r.Email</formula>
    <inlineHelpText>Captures the email address for Additional Contact2.</inlineHelpText>
    <label>Additional Contact 2 Email</label>
    <type>Text</type>
</CustomField>