force-app/main/default/objects/CWS_Trial__c/fields/CWS_Agent_User_Count_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CWS_Agent_User_Count_Last_Updated__c</fullName>
    <inlineHelpText>Captures the date on which agents are deployed at client site.</inlineHelpText>
    <label>Agent/User Count Last Updated</label>
    <type>Date</type>
</CustomField>