force-app/main/default/objects/CWS_Trial__c/fields/CWS_Agents_Users_Deployed_at_Client_Site__c.field-meta.xml
<CustomField>
    <fullName>CWS_Agents_Users_Deployed_at_Client_Site__c</fullName>
    <inlineHelpText>Captures the number of Agent deployed for this trial.</inlineHelpText>
    <label>Agents/Users Deployed at Client Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>