force-app/main/default/objects/CWS_Trial__c/fields/CWS_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>CWS_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the user who approved the trial extension.</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trials</relationshipName>
    <type>Lookup</type>
</CustomField>