force-app/main/default/objects/CWS_Trial__c/fields/CWS_Associated_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Associated_Rep__c</fullName>
    <formula>CWS_Related_Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; CWS_Related_Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the opportunity owner.</inlineHelpText>
    <label>Associated Rep</label>
    <type>Text</type>
</CustomField>