force-app/main/default/objects/CWS_Trial__c/fields/CWS_Associated_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Associated_Rep_Email__c</fullName>
    <label>Associated Rep Email</label>
    <type>Email</type>
</CustomField>