force-app/main/default/objects/CWS_Trial__c/fields/CWS_Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>CWS_Customer_Location__c</fullName>
    <description>Customer Location</description>
    <label>Customer Location</label>
    <length>150</length>
    <type>Text</type>
</CustomField>