force-app/main/default/objects/CWS_Trial__c/fields/CWS_Days_in_Trial__c.field-meta.xml
<CustomField>
    <fullName>CWS_Days_in_Trial__c</fullName>
    <formula>IF(
 AND(NOT(ISBLANK(CWS_Trial_Start_Date__c )),NOT(ISBLANK(CWS_Trial_Actual_Completion_Date__c))),
 CWS_Trial_Actual_Completion_Date__c-CWS_Trial_Start_Date__c,
 IF(NOT(ISBLANK(CWS_Trial_Start_Date__c )),TODAY()-CWS_Trial_Start_Date__c,NULL)
)</formula>
    <inlineHelpText>Captures number of days in trial since the status moved to In Progress until trial is completed.</inlineHelpText>
    <label>Days in Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>