force-app/main/default/objects/CWS_Trial__c/fields/CWS_Days_Remaining_in_Trial__c.field-meta.xml
<CustomField>
    <fullName>CWS_Days_Remaining_in_Trial__c</fullName>
    <formula>IF(AND(NOT(ISBLANK( CWS_Trial_Start_Date__c )), ISPICKVAL(CWS_Stage__c, &quot;In Progress&quot;),CWS_Trial_Start_Date__c  &lt;= TODAY() ,(30 -(Today() - CWS_Trial_Start_Date__c )&gt;=0) ) , 30 -(Today() - CWS_Trial_Start_Date__c ) ,NULL)</formula>
    <inlineHelpText>Number of days until Trial Expected Completion Date.</inlineHelpText>
    <label>Days Remaining in Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>