force-app/main/default/objects/CWS_Trial__c/fields/CWS_Emergency_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CWS_Emergency_Email_Address__c</fullName>
    <inlineHelpText>Captures SOC contact person&apos;s email address.</inlineHelpText>
    <label>Emergency Email Address</label>
    <type>Email</type>
</CustomField>