force-app/main/default/objects/CWS_Trial__c/fields/CWS_Emergency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Emergency_Phone_Number__c</fullName>
    <inlineHelpText>Captures SOC contact person&apos;s phone number.</inlineHelpText>
    <label>Emergency Phone Number</label>
    <type>Phone</type>
</CustomField>