force-app/main/default/objects/CWS_Trial__c/fields/CWS_Extension_Approved__c.field-meta.xml
<CustomField>
    <fullName>CWS_Extension_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Captures if this trial was extended.</inlineHelpText>
    <label>Extension Approved</label>
    <type>Checkbox</type>
</CustomField>