force-app/main/default/objects/CWS_Trial__c/fields/CWS_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Extension_Date__c</fullName>
    <inlineHelpText>Captures the date of trial extension.</inlineHelpText>
    <label>Extension Date</label>
    <type>Date</type>
</CustomField>