force-app/main/default/objects/CWS_Trial__c/fields/CWS_Legacy_Trial_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Trial_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Trial ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>