force-app/main/default/objects/CWS_Trial__c/fields/CWS_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>CWS_Owner_Manager__c</fullName>
    <description>Displays the Manager field value of the Owner User.</description>
    <formula>Owner:User.Manager.FirstName +&apos; &apos;+Owner:User.Manager.LastName</formula>
    <inlineHelpText>Displays the Manager field value of the Owner User.</inlineHelpText>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>