force-app/main/default/objects/CWS_Trial__c/fields/CWS_Primary_Support_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Support_Email_Address__c</fullName>
    <inlineHelpText>Captures email address of Primary contact person.</inlineHelpText>
    <label>Primary Support Email Address</label>
    <type>Email</type>
</CustomField>