force-app/main/default/objects/CWS_Trial__c/fields/CWS_Primary_Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Support_Phone_Number__c</fullName>
    <inlineHelpText>Captures phone number of Primary contact person.</inlineHelpText>
    <label>Primary Support Phone Number</label>
    <type>Phone</type>
</CustomField>