force-app/main/default/objects/CWS_Trial__c/fields/CWS_Primary_Technical_Evaluator__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Technical_Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures Primary technical evaluator person.</inlineHelpText>
    <label>Primary Technical Evaluator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CWS_Related_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trials</relationshipLabel>
    <relationshipName>Trials</relationshipName>
    <type>Lookup</type>
</CustomField>