force-app/main/default/objects/CWS_Trial__c/fields/CWS_Primary_Technical_Evaluator_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Primary_Technical_Evaluator_Email__c</fullName>
    <formula>CWS_Primary_Technical_Evaluator__r.Email</formula>
    <inlineHelpText>Captures the email address for Primary Technical Evaluator.</inlineHelpText>
    <label>Primary Technical Evaluator Email</label>
    <type>Text</type>
</CustomField>