force-app/main/default/objects/CWS_Trial__c/fields/CWS_Pulse_Check__c.field-meta.xml
<CustomField>
    <fullName>CWS_Pulse_Check__c</fullName>
    <inlineHelpText>Captures the type of pulse check performed on this trial.</inlineHelpText>
    <label>Pulse Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>