force-app/main/default/objects/CWS_Trial__c/fields/CWS_Pulse_Check_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CWS_Pulse_Check_Last_Updated__c</fullName>
    <inlineHelpText>Captures the date of last time pulse checked.</inlineHelpText>
    <label>Pulse Check Last Updated</label>
    <type>Date</type>
</CustomField>