force-app/main/default/objects/CWS_Trial__c/fields/CWS_Reason_for_Extension__c.field-meta.xml
<CustomField>
    <fullName>CWS_Reason_for_Extension__c</fullName>
    <inlineHelpText>Captures the reason for trial extension.</inlineHelpText>
    <label>Reason for Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>