force-app/main/default/objects/CWS_Trial__c/fields/CWS_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Captures the account to which the Trial is associated to.</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trials</relationshipLabel>
    <relationshipName>Trials</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>