force-app/main/default/objects/CWS_Trial__c/fields/CWS_Related_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_Account_Owner__c</fullName>
    <formula>CWS_Related_Account__r.Owner.FirstName +&quot; &quot;+  CWS_Related_Account__r.Owner.LastName</formula>
    <inlineHelpText>Captures the account this trial is associated to.</inlineHelpText>
    <label>Related Account Owner</label>
    <type>Text</type>
</CustomField>