force-app/main/default/objects/CWS_Trial__c/fields/CWS_Related_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_Account_Owner_Email__c</fullName>
    <formula>CWS_Related_Account__r.Owner.Email</formula>
    <inlineHelpText>Captures the email of the account owner this trial is associated to.</inlineHelpText>
    <label>Related Account Owner Email</label>
    <type>Text</type>
</CustomField>