force-app/main/default/objects/CWS_Trial__c/fields/CWS_Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Captures the opportunity to which the trial is associated to.</inlineHelpText>
    <label>Related Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CWS_Related_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Prospecting, Analysis, Demo, Proposal, Finalize Quote</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trials</relationshipLabel>
    <relationshipName>Trials</relationshipName>
    <type>Lookup</type>
</CustomField>