force-app/main/default/objects/CWS_Trial__c/fields/CWS_Related_Opportunity_Won__c.field-meta.xml
<CustomField>
    <fullName>CWS_Related_Opportunity_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if related opportunity is closed won</description>
    <label>Related Opportunity Won</label>
    <type>Checkbox</type>
</CustomField>