force-app/main/default/objects/CWS_Trial__c/fields/CWS_Sales_Engineer_Notes__c.field-meta.xml
<CustomField>
    <fullName>CWS_Sales_Engineer_Notes__c</fullName>
    <inlineHelpText>Used by Sales Engineers to capture the notes.</inlineHelpText>
    <label>Sales Engineer Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>