force-app/main/default/objects/CWS_Trial__c/fields/CWS_Stage__c.field-meta.xml
<CustomField>
    <fullName>CWS_Stage__c</fullName>
    <inlineHelpText>Captures the trial stage.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed - Contract Pending</fullName>
            </value>
            <value>
                <fullName>Completed - Contract Successful</fullName>
            </value>
            <value>
                <fullName>Completed - Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>