force-app/main/default/objects/CWS_Trial__c/fields/CWS_Trial_Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Actual_Completion_Date__c</fullName>
    <inlineHelpText>Captures the actual date on which trial was completed.</inlineHelpText>
    <label>Trial Actual Completion Date</label>
    <type>Date</type>
</CustomField>