force-app/main/default/objects/CWS_Trial__c/fields/CWS_Trial_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Product_Type__c</fullName>
    <inlineHelpText>Captures the product for which the trial is created.</inlineHelpText>
    <label>Trial Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>ConnectWise Co-Managed SIEM</fullName>
            </value>
            <value>
                <fullName>ConnectWise Endpoint Policy Management</fullName>
            </value>
            <value>
                <fullName>ConnectWise MDR with Bitdefender</fullName>
            </value>
            <value>
                <fullName>ConnectWise MDR with SentinelOne Complete</fullName>
            </value>
            <value>
                <fullName>ConnectWise SaaS Security</fullName>
            </value>
            <value>
                <fullName>CW RMM Advanced</fullName>
            </value>
            <value>
                <fullName>CW RMM Standard</fullName>
            </value>
            <value>
                <fullName>Fortify - Endpoint</fullName>
                <isActive>false</isActive>
                <label>Fortify - Endpoint</label>
            </value>
            <value>
                <fullName>Fortify for Protection</fullName>
                <isActive>false</isActive>
                <label>Fortify for Protection</label>
            </value>
            <value>
                <fullName>Fortify - Network</fullName>
                <isActive>false</isActive>
                <label>Fortify - Network</label>
            </value>
            <value>
                <fullName>Fortify Webroot DNS</fullName>
            </value>
            <value>
                <fullName>Fortify - Webroot DNS</fullName>
                <isActive>false</isActive>
                <label>Fortify - Webroot DNS</label>
            </value>
            <value>
                <fullName>Fortify Webroot SAT</fullName>
            </value>
            <value>
                <fullName>Fortify - Webroot SAT</fullName>
                <isActive>false</isActive>
                <label>Fortify - Webroot SAT</label>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>ITBoost</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>Third Party - Acronis</fullName>
            </value>
            <value>
                <fullName>Third Party - Bitdefender</fullName>
            </value>
            <value>
                <fullName>Third Party - Gladinet</fullName>
            </value>
            <value>
                <fullName>Third Party - Infrascale Cloud</fullName>
            </value>
            <value>
                <fullName>Third Party - StorageCraft (except the appliance)</fullName>
            </value>
            <value>
                <fullName>Third Party - Storage Guardian (Veeam Cloud &amp; Assigra)</fullName>
            </value>
            <value>
                <fullName>Third Party - Veeam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>