force-app/main/default/objects/CWS_Trial__c/fields/CWS_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Trial_Start_Date__c</fullName>
    <inlineHelpText>Captures the start date of the trial.</inlineHelpText>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>