force-app/main/default/objects/CWS_Trial__c/validationRules/CWS_TrialProductValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_TrialProductValidation</fullName>
    <active>true</active>
    <description>Once a Trial is moved to &quot;In Progress&quot; or any of the Completed stages the Product should not be allowed to be changed</description>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
OR(
ISPICKVAL(CWS_Stage__c, &quot;In Progress&quot;) ,
ISPICKVAL(CWS_Stage__c, &quot;Completed - Contract Pending&quot;) ,
ISPICKVAL(CWS_Stage__c, &quot;Completed - Contract Successful&quot;) ,
ISPICKVAL(CWS_Stage__c, &quot;Completed - Unsuccessful&quot;) 
),
ISCHANGED( CWS_Trial_Product_Type__c )
)</errorConditionFormula>
    <errorMessage>This Trial is in progress/completed. You cannot change the Product.</errorMessage>
</ValidationRule>